force-app/main/default/objects/Site_Schedule__c/Site_Schedule__c.object-meta.xml
<CustomObject>
    <label>Site Schedule</label>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Site Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>