force-app/main/default/objects/Site_Schedule__c/fields/Begin_Number__c.field-meta.xml
<CustomField>
    <fullName>Begin_Number__c</fullName>
    <label>Begin Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>