force-app/main/default/objects/Site_Schedule__c/fields/Begin_Time__c.field-meta.xml
<CustomField>
    <fullName>Begin_Time__c</fullName>
    <label>Begin Time</label>
    <type>DateTime</type>
</CustomField>