force-app/main/default/objects/Site_Schedule__c/fields/Scheduled_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Volunteers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scheduled Volunteers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>