force-app/main/default/objects/Site_Schedule__c/fields/School_Year__c.field-meta.xml
<CustomField>
    <fullName>School_Year__c</fullName>
    <label>School Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2018-2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>