force-app/main/default/objects/Site_Schedule__c/fields/Tutoring_Site__c.field-meta.xml
<CustomField>
    <fullName>Tutoring_Site__c</fullName>
    <label>Tutoring Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Participation_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>